--- a/notebooks/repaint.ipynb
+++ b/notebooks/repaint.ipynb
@@ -2,111 +2,103 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "✅  Done – output saved to screen_with_media.mp4\n"
+      "✅  Media burned in – saved to screen_with_media.mp4\n"
      ]
     }
    ],
    "source": [
-    "# %% ----------------  burn media.png onto the recorded screen  ----------------\n",
-    "import cv2, json, numpy as np, logging, pathlib\n",
+    "# %% ---------------- centre-aligned, over-scaled media replacement ----------------\n",
+    "import cv2, json, numpy as np, logging, math, pathlib\n",
     "\n",
-    "JSON_TRACK = \"aruco_screen_tracks.json\"  # from previous export\n",
-    "VIDEO_IN = \"aruco.mp4\"\n",
-    "MEDIA_IMG = \"media.png\"\n",
-    "VIDEO_OUT = \"screen_with_media.mp4\"\n",
-    "ALPHA = 0.0  # set >0 if you want the video faintly visible behind media\n",
+    "# ── files ──────────────────────────────────────────────────────────────\n",
+    "TRACK_JSON = \"aruco_screen_tracks.json\"   # produced by the tracker\n",
+    "VIDEO_IN   = \"aruco.mp4\"                  # original recording\n",
+    "MEDIA_IMG  = \"media.png\"                  # picture to show on screen\n",
+    "VIDEO_OUT  = \"screen_with_media.mp4\"      # result\n",
+    "ALPHA      = 0.0                          # 0 = full replace; >0 = faint underlay\n",
     "\n",
-    "# ─── tiny log (optional) ─────────────────────────────────────────────────────\n",
-    "logging.basicConfig(\n",
-    "    filename=\"replace_debug.log\",\n",
-    "    filemode=\"w\",\n",
-    "    level=logging.DEBUG,\n",
-    "    format=\"%(message)s\",\n",
-    ")\n",
+    "# ── debug log (optional) ───────────────────────────────────────────────\n",
+    "logging.basicConfig(filename=\"replace_debug.log\",\n",
+    "                    filemode=\"w\", level=logging.DEBUG, format=\"%(message)s\")\n",
     "log = logging.getLogger(\"replace\")\n",
     "\n",
-    "# ─── load JSON ───────────────────────────────────────────────────────────────\n",
-    "with open(JSON_TRACK, \"r\", encoding=\"utf-8\") as f:\n",
-    "    info = json.load(f)\n",
+    "# ═══ 1.  load tracking JSON ════════════════════════════════════════════\n",
+    "with open(TRACK_JSON, \"r\", encoding=\"utf-8\") as f:\n",
+    "    meta = json.load(f)\n",
     "\n",
-    "frames_info = info[\"frames\"]\n",
-    "FW, FH = info[\"frame_width\"], info[\"frame_height\"]\n",
+    "frames = meta[\"frames\"]\n",
+    "FW, FH = meta[\"frame_width\"], meta[\"frame_height\"]\n",
     "\n",
-    "# ─── open video + media -------------------------------------------------------\n",
-    "cap = cv2.VideoCapture(VIDEO_IN)\n",
-    "fps = cap.get(cv2.CAP_PROP_FPS)\n",
+    "# ═══ 2.  open video & media image ═════════════════════════════════════\n",
+    "cap  = cv2.VideoCapture(VIDEO_IN)\n",
+    "fps  = cap.get(cv2.CAP_PROP_FPS)\n",
     "four = cv2.VideoWriter_fourcc(*\"mp4v\")\n",
-    "out = cv2.VideoWriter(VIDEO_OUT, four, fps, (FW, FH))\n",
+    "out  = cv2.VideoWriter(VIDEO_OUT, four, fps, (FW, FH))\n",
     "\n",
-    "media = cv2.imread(MEDIA_IMG, cv2.IMREAD_COLOR)\n",
+    "media = cv2.imread(MEDIA_IMG)\n",
     "if media is None:\n",
     "    raise RuntimeError(f\"Cannot read {MEDIA_IMG}\")\n",
     "mh, mw = media.shape[:2]\n",
     "\n",
-    "# source quad placeholder — will be updated per frame\n",
-    "src_quad = np.array([[0, 0], [1, 0], [1, 1], [0, 1]], np.float32)\n",
+    "# reusable 4-point source quad\n",
+    "src_quad = np.zeros((4, 2), np.float32)\n",
     "\n",
-    "for idx, rec in enumerate(frames_info):\n",
+    "# ═══ 3.  frame loop ═══════════════════════════════════════════════════\n",
+    "for rec in frames:\n",
     "    ok, frame = cap.read()\n",
     "    if not ok:\n",
     "        break\n",
     "\n",
     "    if not rec[\"valid\"]:\n",
-    "        out.write(frame)  # no overlay this frame\n",
+    "        out.write(frame)\n",
     "        continue\n",
     "\n",
-    "    dst_quad = np.array(rec[\"corners\"], np.float32)  # TL,TR,BR,BL\n",
+    "    dst_quad = np.array(rec[\"corners\"], np.float32)   # TL,TR,BR,BL\n",
     "\n",
-    "    # ---- overlay size in this frame ---------------------------------------\n",
-    "    ov_w = int(np.linalg.norm(dst_quad[1] - dst_quad[0]) + 0.5)  # top edge\n",
-    "    ov_h = int(np.linalg.norm(dst_quad[3] - dst_quad[0]) + 0.5)  # left edge\n",
+    "    # overlay size this frame\n",
+    "    ov_w = int(np.linalg.norm(dst_quad[1] - dst_quad[0]) + 0.5)   # top edge\n",
+    "    ov_h = int(np.linalg.norm(dst_quad[3] - dst_quad[0]) + 0.5)   # left edge\n",
     "\n",
-    "    # ---- first try: scale by width ----------------------------------------\n",
-    "    scale_w = ov_w / mw\n",
-    "    tmp = cv2.resize(media, (ov_w, int(mh * scale_w)), interpolation=cv2.INTER_AREA)\n",
-    "    th, tw = tmp.shape[:2]  # tw == ov_w\n",
+    "    # -------- always overscale *at least* one pixel larger -----------\n",
+    "    scale = max(ov_w / mw, ov_h / mh) * 1.01        # +1 % safety\n",
+    "    big   = cv2.resize(media,\n",
+    "                       (math.ceil(mw * scale), math.ceil(mh * scale)),\n",
+    "                       interpolation=cv2.INTER_AREA)\n",
+    "    bh, bw = big.shape[:2]\n",
     "\n",
-    "    if th >= ov_h:  # tall enough → crop/keep top\n",
-    "        patch = tmp[:ov_h, :]  # cut bottom if needed\n",
-    "    else:\n",
-    "        # ---- second try: scale by height; then center-crop width ----------\n",
-    "        scale_h = ov_h / mh\n",
-    "        tmp = cv2.resize(media, (int(mw * scale_h), ov_h), interpolation=cv2.INTER_AREA)\n",
-    "        th, tw = tmp.shape[:2]  # th == ov_h\n",
-    "        if tw > ov_w:  # crop equally from both sides\n",
-    "            x0 = (tw - ov_w) // 2\n",
-    "            patch = tmp[:, x0 : x0 + ov_w]\n",
-    "        else:\n",
-    "            patch = tmp  # rare corner-case: exact fit\n",
+    "    # centred crop to exact overlay size (keeps centre of mass)\n",
+    "    x0 = max(0, (bw - ov_w) // 2)\n",
+    "    y0 = max(0, (bh - ov_h) // 2)\n",
+    "    patch = big[y0:y0 + ov_h, x0:x0 + ov_w]\n",
     "\n",
-    "    # src quad now exactly matches patch size\n",
-    "    ph, pw = patch.shape[:2]  # pw == ov_w , ph == ov_h\n",
+    "    # source quad matches patch\n",
+    "    ph, pw = patch.shape[:2]        # pw==ov_w , ph==ov_h\n",
     "    src_quad[:] = [[0, 0], [pw - 1, 0], [pw - 1, ph - 1], [0, ph - 1]]\n",
     "\n",
-    "    # ---- warp & composite --------------------------------------------------\n",
-    "    H = cv2.getPerspectiveTransform(src_quad, dst_quad)\n",
+    "    # -------- warp & composite ---------------------------------------\n",
+    "    H      = cv2.getPerspectiveTransform(src_quad, dst_quad)\n",
     "    warped = cv2.warpPerspective(patch, H, (FW, FH))\n",
     "\n",
-    "    mask = cv2.warpPerspective(np.ones((ph, pw), np.uint8) * 255, H, (FW, FH))\n",
-    "    if ALPHA > 0:\n",
-    "        bg = cv2.addWeighted(frame, 1 - ALPHA, warped, ALPHA, 0, mask=None)\n",
+    "    mask   = cv2.warpPerspective(np.full((ph, pw), 255, np.uint8), H, (FW, FH))\n",
+    "    mask_i = cv2.bitwise_not(mask)\n",
+    "\n",
+    "    if ALPHA:\n",
+    "        base = cv2.addWeighted(frame, 1 - ALPHA, warped, ALPHA, 0)\n",
+    "        frame = cv2.bitwise_and(base, base, mask=mask) + cv2.bitwise_and(frame, frame, mask=mask_i)\n",
     "    else:\n",
-    "        inv = cv2.bitwise_not(mask)\n",
-    "        bg = cv2.bitwise_and(frame, frame, mask=inv)\n",
-    "    final = cv2.bitwise_or(bg, cv2.bitwise_and(warped, warped, mask=mask))\n",
+    "        frame = cv2.bitwise_and(frame, frame, mask=mask_i) + cv2.bitwise_and(warped, warped, mask=mask)\n",
     "\n",
-    "    out.write(final)\n",
+    "    out.write(frame)\n",
     "\n",
-    "cap.release()\n",
-    "out.release()\n",
-    "print(\"✅  Done – output saved to\", VIDEO_OUT)\n"
+    "cap.release(); out.release()\n",
+    "print(\"✅  Media burned in – saved to\", VIDEO_OUT)\n"
    ]
   }
  ],
